@@ -3,6 +3,9 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  - fix remove_columns shortcut to add the 'remove_columns' attribute
    in case it is missing (Karen Etheridge, #101)
+ - Add support for query condition to results_exist() and
+   results_exist_as_query() in Helper::ResultSet::Shortcut::ResultsExist
+   (Daniel Böhmer, GH#102)
 
 2.035000  2020-02-21 08:38:42-08:00 America/Los_Angeles
  - add remove_columns shortcut (Karen Etheridge, GH#100)
